# toy-hypercore

./: Cargo.toml  README.md
src/: crypto.rs  discovery.rs  main.rs
